@@ -2,5 +2,8 @@ lib/End.pm
 MANIFEST
 Makefile.PL
 t/000_tests.t
+t/950_pod.t
+t/960_pod_coverage.t
+t/990_kwalitee.t
 README
 Changes
